# fflogs-scraping

./: .gitignore  LICENSE.txt  README.md  README.rst  TODO.md  __main__.py  environment.yml  readthedocs.yaml  requirements.txt  setup.cfg
docs/: conf.py  index.rst  main.rst  user_input.rst
docs/_build/doctrees/: apidoc.doctree  combination.doctree  environment.pickle  index.doctree  main.doctree  scraping.doctree  user_input.doctree  visualization.doctree
docs/_build/html/: .buildinfo  apidoc.html  combination.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  scraping.html  search.html  searchindex.js  user_input.html  visualization.html
docs/data/: index.rst
fflogs-study-project/: __main__.py  fflogs.py
fflogs-study-project/data/: data_combination.py  data_scraping.py  data_visualization.py
fflogs-study-project/data/assets/: style.css
fflogs-study-project/data/csv/: FF Logs - Combat Analysis for FF(1).csv  (+4 more)
fflogs-study-project/firefox profile with adblock/: AlternateServices.txt  SiteSecurityServiceState.txt  addonStartup.json.lz4  addons.json  cert9.db  cookies.sqlite  extension-preferences.json  extension-settings.json  extensions.json  key4.db  permissions.sqlite  pkcs11.txt  prefs.js  search.json.mozlz4  sessionstore.jsonlz4  storage.sqlite  times.json
fflogs-study-project/input/: user_input.py
src/fflogs-scraping/: main.py  new_app.py  user_input.py
src/fflogs-study-project/: __main__.py  fflogs.py  user_input.py
src/fflogs_scraping/: __main__.py  main.py  user_input.py
tests/: test_data_visualization.py
(+91 files in other folders)
