[metadata]
name = fflogs-study-project
version = 0.0.1
license = MIT
description = Scrape fflog entries for damage done and healing done tables, combine data from multiple logs and then visualize using a dash dashboard.
long_description = file: README.md
author = Jakob Heller
classifiers=
   Development Status :: 4 - Beta
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Programming Language :: Python
   Topic :: Games/Entertainment :: Role-Playing

[options]
packages = find:
package_dir =
    =fflogs-study-project
include_package_data = True
install_requires =
    beautifulsoup4==4.11.1
    dash==2.5.1
    pandas==1.3.5
    selenium==4.3.0

[options.packages.find]
where=fflogs-study-project
